--- a/README.org
+++ b/README.org
@@ -1,2 +1,4 @@
 * Jethro's Paper Archive
-Paper reading goal: 365 papers a year
+Paper reading goal: 365 papers a year!!
+
+To track progress: [[file:papers.org]]
